# gnomish-army-knife

./: .gitignore  .gitmodules  .isort.cfg  .pylintrc  LICENSE  README.md  backup_wow_settings.sh  common.sh  deploy_steamdeck.sh  link_wow.sh  manifest.yaml  mypy.ini  pull_from_backup.sh  pyproject.toml  read_logs.py  setup.py  update_addon.sh  watch_addon.sh  watch_local.sh
.github/: FUNDING.yml
.github/workflows/: python-package.yml
addon/: Bindings.xml  README.md  actionbar_page_changed.lua  bars.lua  buttons.lua  cvars.lua  expectedCVars.lua  gnomish-army-knife.blp  gnomish-army-knife.lua  gnomish-army-knife.toc  keybinds.lua  keymap.lua  macros.lua  stylua.toml
gnomish_army_knife/: __init__.py  __main__.py  app.py  dev_requirements.txt  entry.py  requirements.txt  schemas.py
gnomish_army_knife/commands/: all.py  markdown.py  scan.py
gnomish_army_knife/config/: __init__.py
gnomish_army_knife/data/: base.yaml  factories.yaml  macros.yaml  server.yaml  writer.yaml
gnomish_army_knife/database/: __init__.py  combat_log.py  event.py  meta.py  queue.py  writer.py
gnomish_army_knife/enums/: events.py
gnomish_army_knife/icon/: __init__.py
gnomish_army_knife/macro/: __init__.py  category.py  database.py  group.py
gnomish_army_knife/markdown/: generate.py
im/: dalaran_sewers.drawio
md/: proposal.md  proposal_2.md  proposal_3.md
tasks/: amber_log.yaml  conf.py  config.yaml  default.yaml  make_test_db.yaml  test_common.yaml  test_config.yaml  test_db.py  test_db_writer.yaml  util.py  vaughn_log.yaml
tests/: resources.py  test_entry.py
(+170 files in other folders)
